@@ -1,4 +1,0 @@
-<!entity activitycont.sgml system "activitycont.sgml">
-<!entity activitymeta.sgml system "activitymeta.sgml">
-<!entity activity00.sgml system "activity00.sgml">
-<!entity activitypages.sgml system "activitypages.sgml">
